--- a/app/build.gradle
+++ b/app/build.gradle
@@ -110,6 +110,6 @@ dependencies {
 
 //    google maps
     implementation 'com.google.android.gms:play-services-maps:18.1.0'
-
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.2'
 }
 
