--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 buildscript {
-    ext.kotlin_version = "1.4.31"
+    ext.kotlin_version = '1.8.0'
     repositories {
         google()
         jcenter()
         maven { url "https://jitpack.io" }
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.1.2"
+        classpath 'com.android.tools.build:gradle:8.1.4'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -28,17 +28,17 @@ task clean(type: Delete) {
 }
 
 ext {
-    activityVersion = '1.1.0'
-    appCompatVersion = '1.3.0-alpha02'
-    constraintLayoutVersion = '2.0.4'
+    activityVersion = '1.8.1'
+    appCompatVersion = '1.7.0-alpha03'
+    constraintLayoutVersion = '2.1.4'
     coreTestingVersion = '2.1.0'
     coroutines = '1.3.9'
-    lifecycleVersion = '2.2.0'
+    lifecycleVersion = '2.6.2'
     fragment_version = '2.3.4'
-    materialVersion = '1.3.0'
+    materialVersion = '1.10.0'
     cardViewVersion = '1.0.0'
-    roomVersion = '2.2.6'
-    camerax_version = '1.1.0-alpha03'
+    roomVersion = '2.5.0'
+    camerax_version = '1.4.0-alpha02'
     // testing
     junitVersion = '4.13.1'
     espressoVersion = '3.1.0'
